 - This may break a hand-operated downstream.
 - Migrated from 1.x.y to 2.xxxyyy
 - This is the primary reason for the 2.x on the box.
 - https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129

 [Dependencies::Stats]
 - Dependencies changed since 1.0.3, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +46 -2 (recommends: -1, suggests: +1 ↑1)
 - runtime: ↓1
 - test: +3 ↓1 -2 (recommends: +3)

 [Metadata]
 - Add email address to copyright.
 - Recognise 2x Contributors.
 - Migrate to github/kentnl

 [Tests]
 - Use Test::Compile::PerFile instead of Test::Compile
 - Use Test::ReportPrereqs instead of Test::ReportVersions::Tiny

1.0.3 2013-04-06T05:09:44Z
 - Maintenance release for Module::Build 0.4004

 [Dependencies::Stats]
 - Dependencies changed since 1.0.2, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +5 (recommends: ↑1, suggests: ↑1)
 - test: ↑1

 [Documentation]
 - update copyright year
 - reindent license
 - update license address
 - add README.mkdn

 [Meta]
 - bugtracker to github issues

 [Packaging]
 - ship perltidyrc
 - utilise test_requires in Build.PL

1.0.2 2011-10-30T19:28:41Z
 - Maintenance Release

 [Dependencies::Stats]
 - Dependencies changed since 1.0.1, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: +3
 - test: -1

 [Internals]
 - $VERSION set outside begin
 - $AUTHORITY now defined
 - code tidied

 [Packaging]
 - Update License ( Indent, Address )
 - Move author/release tests to xt/
 - Repository urls moved to https://
 - added x_authority

1.0.1 2011-04-04T07:40:17Z
 [Dependencies::Stats]
 - Dependencies changed since 1.0.0, see misc/*.deps* for details
 - develop: +1 -1 (recommends: +1 -1, suggests: +1 -1)

 [Features]
 - Rework code to to work properly with role attributes. ( Thanks doy / Jesse Luehrs )

 [Packaging]
 - Rework Changelog for CPAN::Changes 1:1 compatibility.
 - Move from @KENTNL to @Author::KENTNL

1.0.0 2011-01-23T04:01:35Z
 [BugFix]