@@ -4,6 +4,9 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  [Added / configure requires]
  - ExtUtils::MakeMaker
 
+ [Added / runtime requires]
+ - namespace::clean
+
  [Added / test requires]
  - ExtUtils::MakeMaker
  - File::Spec
@@ -20,6 +23,9 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
 
  [Removed / configure requires]
  - Module::Build 0.4004
+
+ [Removed / runtime requires]
+ - namespace::autoclean 0.08
 
  [Removed / test requires]
  - File::Find
