@@ -58,6 +58,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Added / develop suggests]
  - Dist::Zilla::App::Command::bakeini 0.001002
 
+ [Added / runtime requires]
+ - namespace::clean
+
  [Added / test recommends]
  - CPAN::Meta 2.120900
  - ExtUtils::MakeMaker 6.98
@@ -89,6 +92,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Removed / develop requires]
  - Dist::Zilla::PluginBundle::Author::KENTNL::Lite
  - version 0.9901
+
+ [Removed / runtime requires]
+ - namespace::autoclean 0.08
 
  [Removed / test requires]
  - File::Find
